apps/metrics/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - prometheus.home.alden.ai
  rules:
  - backendRefs:
    - name: prometheus-k8s
      port: 9090
    matches:
    - path:
        type: PathPrefix
        value: /
