apps/metrics/prometheus/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prometheus-virtualservice
spec:
  hosts:
    - prometheus.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-k8s.prometheus.svc.cluster.local
            port:
              number: 9090
